Fix production deployment issues
- Fix Pillow deprecation warnings: replace getdata() with get_flattened_data()
- Add Gunicorn for production server (replace Flask dev server)
- Create gunicorn_config.py with proper timeout settings
- Force disable debug mode in production environment
- Update render.yaml to use Gunicorn
- Add backward compatibility for older Pillow versions

--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: ai-decoration
     env: python
     buildCommand: pip install --upgrade pip setuptools wheel && pip install -r requirements.txt
-    startCommand: python src/app.py
+    startCommand: gunicorn -c gunicorn_config.py src.app:app
     envVars:
       - key: PORT
         value: 5423
